--- a/pki/ca/create/config
+++ b/pki/ca/create/config
@@ -3,13 +3,13 @@ distinguished_name      = req_distinguished_name
 prompt                  = no
 
 [ req_distinguished_name ]
-CN                      = Fruit CA
+CN                      = Autocracy CA
 
 [ ca ]
-default_ca              = Fruit
+default_ca              = Autocracy
 prompt                  = no
 
-[ Fruit ]
+[ Autocracy ]
 dir                     = ca
 certs                   = $dir
 new_certs_dir           = $dir/certs
