--- a/pki/ca/config
+++ b/pki/ca/config
@@ -1,7 +1,6 @@
-oid_section             = extra_oids
-
 [ ca ]
 default_ca              = Autocracy
+prompt                  = no
 
 [ Autocracy ]
 dir                     = ca
@@ -13,13 +12,14 @@ RANDFILE                = $dir/rand
 certificate             = $dir/certificate
 private_key             = $dir/key
 default_startdate       = 19700101000000Z
-default_enddate         = 21000101000000Z
+default_enddate         = 99991231235959Z
 default_md              = sha512
 preserve                = yes
 unique_subject          = no
 policy                  = policy_anything
 x509_extensions         = x509_extensions
 copy_extensions         = copy
+default_crl_days        = 99999
 
 [ policy_anything ]
 commonName              = supplied
@@ -33,14 +33,6 @@ uid                     = optional
 dc                      = optional
 
 [ x509_extensions ]
-basicConstraints        = critical,CA:FALSE
-keyUsage                = digitalSignature,keyEncipherment,keyAgreement
+basicConstraints        = critical, CA:FALSE
+keyUsage                = digitalSignature, keyEncipherment, keyAgreement
 extendedKeyUsage        = clientAuth
-#extendedKeyUsage        = serverAuth
-#extendedKeyUsage        = serverAuth, clientAuth
-#subjectKeyIdentifier    = hash
-#authorityKeyIdentifier  = keyid:always, issuer:always
-
-[ extra_oids ]
-#uid = 1.3.6.1.4.1.1466.115.121.1.15
-dc = 1.3.6.1.4.1.1466.115.121.1.26
