--- a/pki/ca/create/config
+++ b/pki/ca/create/config
@@ -1,10 +1,3 @@
-[ req ]
-distinguished_name      = req_distinguished_name
-prompt                  = no
-
-[ req_distinguished_name ]
-CN                      = Autocracy CA
-
 [ ca ]
 default_ca              = Autocracy
 prompt                  = no
@@ -19,13 +12,14 @@ RANDFILE                = $dir/rand
 certificate             = $dir/certificate
 private_key             = $dir/key
 default_startdate       = 19700101000000Z
-default_enddate         = 20380119031407Z
+default_enddate         = 99991231235959Z
 default_md              = sha512
-preserve                = no
+preserve                = yes
 unique_subject          = no
 policy                  = policy_anything
 x509_extensions         = x509_extensions
 copy_extensions         = copy
+default_crl_days        = 99999
 
 [ policy_anything ]
 commonName              = supplied
@@ -35,7 +29,16 @@ organizationName        = optional
 localityName            = optional
 stateOrProvinceName     = optional
 countryName             = optional
+uid                     = optional
+dc                      = optional
 
 [ x509_extensions ]
-basicConstraints        = critical,CA:TRUE
-keyUsage                = critical,keyCertSign,cRLSign
+basicConstraints        = critical, CA:TRUE
+keyUsage                = critical, keyCertSign, cRLSign
+
+[ req ]
+distinguished_name      = req_distinguished_name
+prompt                  = no
+
+[ req_distinguished_name ]
+CN                      = Autocracy CA
